修改读取兼容性模板的方式